--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ body {
   text-decoration: none;
   color: var(--brandColor);
 }
-.logo__dark {
+.logo__text {
   color:var(--firstFontColor);
 }
 .link {
@@ -114,7 +114,7 @@ body {
   font-weight: 500;
   border-bottom: 1px solid #ececec;
 }
-.thumb {
+.page-header__container {
   display: flex;
 }
 .menu {
@@ -141,10 +141,10 @@ body {
   text-decoration: none;
   color: var(--firstFontColor);
 }
-.navigation__link--current {
+.navigation__link--active {
   color:var(--brandColor);
 }
-.navigation__link--current::after {
+.navigation__link--active::after {
   content: "";
   position: absolute;
   left: 0;
@@ -156,13 +156,17 @@ body {
 }
 .contacts {
   display: flex;
+}
+.page-header__contacts {
   margin-left: auto;
 }
 /* .contacts__item{} */
 
 .contacts__icon {
-  margin-right: 10px;
   fill: currentColor;
+}
+.contacts__icon--left {
+  margin-right: 10px;
 }
 .contacts__item:not(:last-child) {
   margin-right: 50px;
@@ -192,7 +196,7 @@ body {
   background-position: center;
   background-size: cover;
 }
-.box {
+.hero__container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -209,7 +213,6 @@ body {
   margin-bottom: 30px;
   color: var(--lightFontColor);
 }
-
 /* .hero__btn {} */
 
 /*----------------------------features-----------------------*/
@@ -247,7 +250,7 @@ body {
   color: var(--secondFontColor);
 }
 /*----------------------------works-------------------------*/
-.section--padding {
+.section--no-padding {
   padding-top: 0;
 }
 .title {
@@ -255,6 +258,8 @@ body {
   font-weight: 700;
   letter-spacing: var(--mainLetterSpacing);
   text-align: center;
+}
+.section__title {
   margin-bottom: 50px;
 }
 .works {
@@ -285,13 +290,12 @@ body {
   text-transform: uppercase;
   color: var(--lightFontColor);
 }
-
 /* .works__img {} */
 
-.background {
+/*------------------------------team-----------------------*/
+.section--dark-bg {
   background-color: var(--sectionBg);
 }
-/*------------------------------team-----------------------*/
 .team {
   display: flex;
 }
@@ -326,9 +330,7 @@ body {
   display: flex;
   justify-content: center;
 }
-
 /* .social__item {} */
-
 .social__item:not(:last-child) {
   margin-right: 10px;
 }
@@ -384,6 +386,8 @@ body {
 .filter {
   display: flex;
   justify-content: center;
+}
+.section__filter {
   margin-bottom: 50px;
 }
 .filter__item:not(:last-child) {
@@ -488,16 +492,16 @@ body {
 
 /*---------------------------------------------footer------------------------------------*/
 
-.footer {
+.page-footer {
   background-color: var(--mainBg);
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.footer__logo {
+.page-footer__logo {
   display: block;
   margin-bottom: 20px;
 }
-.logo__light {
+.logo__text--light {
   color: var(--lightFontColor);
 }
 
@@ -516,19 +520,18 @@ body {
   color: var(--lightFontColor);
 }
 .address__link {
-  text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
 }
 /* ------------------------social links block-------------- */
-.footer__thumb {
+.page-footer__container {
   display: flex;
   align-items: baseline;
 }
-.footer__box:first-child {
+.page-footer__box:first-child {
   margin-right: 70px;
   flex-grow: 1;
 }
-.footer__text {
+.page-footer__text {
   line-height: 1.14;
   font-weight: 700;
   letter-spacing: var(--mainLetterSpacing);
@@ -546,7 +549,7 @@ body {
   border-radius: 50%;
 }
 /* ------------------------subscribe------------------------ */
-.footer__box:nth-child(2) {
+.page-footer__box:nth-child(2) {
   margin-right: 93px;
 }
 .subscribe {
