--- a/css/main.css
+++ b/css/main.css
@@ -43,4 +43,290 @@ img {
 a {
   text-decoration: none;
 }
+
+body {
+  font-size: 14px;
+  line-height: 1.2;
+  font-family: Roboto, sans-serif;
+  color: var(--firstFontColor);
+  background-color: var(--nullBg);
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.page-header {
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  border-bottom: 1px solid #ececec;
+}
+
+.page-header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.page-header__contacts {
+  margin-left: auto;
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.menu__logo {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-right: 93px;
+}
+
+.logo {
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: var(--mainLetterSpacing);
+  text-decoration: none;
+  color: var(--brandColor);
+}
+
+.logo__text {
+  color: var(--firstFontColor);
+}
+
+.logo__text--light {
+  color: var(--lightFontColor);
+}
+
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navigation__item {
+  position: relative;
+}
+
+.navigation__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.navigation__link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  text-decoration: none;
+  color: var(--firstFontColor);
+  -webkit-transition: color var(--mainTransitionTime) var(--mainTransition);
+  transition: color var(--mainTransitionTime) var(--mainTransition);
+}
+
+.navigation__link:focus, .navigation__link:hover {
+  color: var(--brandColor);
+}
+
+.navigation__link--active {
+  color: var(--brandColor);
+}
+
+.navigation__link--active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  background-color: var(--brandColor);
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+}
+
+.contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.contacts__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.contacts__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: var(--secondFontColor);
+  -webkit-transition: color var(--mainTransitionTime) var(--mainTransition);
+  transition: color var(--mainTransitionTime) var(--mainTransition);
+}
+
+.contacts__link:focus, .contacts__link:hover {
+  color: var(--brandColor);
+}
+
+.contacts__icon {
+  fill: currentColor;
+}
+
+.contacts__icon--left {
+  margin-right: 10px;
+}
+
+.contacts__icon--right {
+  margin-left: 10px;
+}
+
+.hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin: 0 auto;
+  max-width: 1600px;
+  height: 600px;
+  background-color: var(--mainBg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-bg.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.hero__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hero__title {
+  font-size: 44px;
+  font-weight: 900;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-align: center;
+  max-width: 700px;
+  margin-bottom: 30px;
+  color: var(--lightFontColor);
+}
+
+.button {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  background-color: var(--brandColor);
+  color: var(--lightFontColor);
+  -webkit-transition: background-color var(--mainTransitionTime) var(--mainTransition), -webkit-box-shadow var(--mainTransitionTime) var(--mainTransition);
+  transition: background-color var(--mainTransitionTime) var(--mainTransition), -webkit-box-shadow var(--mainTransitionTime) var(--mainTransition);
+  transition: background-color var(--mainTransitionTime) var(--mainTransition), box-shadow var(--mainTransitionTime) var(--mainTransition);
+  transition: background-color var(--mainTransitionTime) var(--mainTransition), box-shadow var(--mainTransitionTime) var(--mainTransition), -webkit-box-shadow var(--mainTransitionTime) var(--mainTransition);
+}
+
+.button:focus, .button:hover {
+  background-color: var(--brandHover);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.section--no-padding {
+  padding-top: 0;
+}
+
+.section--dark-bg {
+  background-color: var(--sectionBg);
+}
+
+.section__title {
+  font-size: 36px;
+  font-weight: 700;
+  letter-spacing: var(--mainLetterSpacing);
+}
+
+.section__title--bottom-indent {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.features {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.features__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #F5F4FA;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+}
+
+.features__title {
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: var(--mainLetterSpacing);
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.features__text {
+  line-height: 1.71;
+  letter-spacing: var(--mainLetterSpacing);
+  color: var(--secondFontColor);
+}
+
+.features__item {
+  -ms-flex-preferred-size: calc((100% - 90px) / 4);
+      flex-basis: calc((100% - 90px) / 4);
+}
+
+.features__item:not(:last-child) {
+  margin-right: 30px;
+}
 /*# sourceMappingURL=main.css.map */
