--- a/sass/utils/_nullstyle.scss
+++ b/sass/utils/_nullstyle.scss
@@ -24,3 +24,10 @@ img {
 a {
   text-decoration: none;
 }
+body {
+  font-size: 14px;
+  line-height: 1.2;
+  font-family: Roboto, sans-serif;
+  color: var(--firstFontColor);
+  background-color: var(--nullBg);
+}
