--- a/css/main.css
+++ b/css/main.css
@@ -239,6 +239,15 @@ body {
 }
 
 .button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.87;
@@ -258,6 +267,18 @@ body {
   background-color: var(--brandHover);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.button__icon {
+  fill: currentColor;
+}
+
+.button__icon--left {
+  margin-right: 10px;
+}
+
+.button__icon--right {
+  margin-left: 10px;
 }
 
 .section {
@@ -294,12 +315,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #F5F4FA;
   border-radius: 4px;
   margin-bottom: 30px;
@@ -328,5 +349,299 @@ body {
 
 .features__item:not(:last-child) {
   margin-right: 30px;
+}
+
+.works {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.works__box {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.works__label {
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: var(--mainLetterSpacing);
+  text-transform: uppercase;
+  color: var(--lightFontColor);
+}
+
+.works__item {
+  position: relative;
+  -ms-flex-preferred-size: calc((100% - 60px) / 3);
+      flex-basis: calc((100% - 60px) / 3);
+}
+
+.works__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.team__img {
+  display: block;
+}
+
+.team__box {
+  font-size: 16px;
+  letter-spacing: var(--mainLetterSpacing);
+  text-align: center;
+  padding: 30px 32px;
+}
+
+.team__title {
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.team__text {
+  margin-bottom: 16px;
+  color: var(--secondFontColor);
+}
+
+.team__item {
+  -ms-flex-preferred-size: calc((100% - 90px) / 4);
+      flex-basis: calc((100% - 90px) / 4);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background-color: var(--nullBg);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.team__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.social--no-indent {
+  padding: 0;
+  margin: 0;
+}
+
+.social__icon {
+  fill: currentColor;
+}
+
+.social__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 44px;
+  height: 44px;
+  outline: none;
+  color: var(--iconColor);
+  border-radius: 50%;
+  -webkit-transition: background-color var(--mainTransitionTime) var(--mainTransition), color var(--mainTransitionTime) var(--mainTransition);
+  transition: background-color var(--mainTransitionTime) var(--mainTransition), color var(--mainTransitionTime) var(--mainTransition);
+}
+
+.social__link--dark-bg {
+  color: var(--nullBg);
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+
+.social__link:focus, .social__link:hover {
+  background-color: var(--brandColor);
+  color: var(--nullBg);
+}
+
+.clients {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.clients__icon {
+  fill: currentColor;
+}
+
+.clients__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.clients__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 170px;
+  height: 92px;
+  border-radius: 4px;
+  outline: none;
+  border: 1px solid var(--iconColor);
+  color: var(--iconColor);
+  -webkit-transition: border-color var(--mainTransitionTime) var(--mainTransition), color var(--mainTransitionTime) var(--mainTransition);
+  transition: border-color var(--mainTransitionTime) var(--mainTransition), color var(--mainTransitionTime) var(--mainTransition);
+}
+
+.clients__link:focus, .clients__link:hover {
+  color: var(--brandColor);
+  border-color: var(--brandColor);
+}
+
+.page-footer {
+  background-color: var(--mainBg);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.page-footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+.page-footer__logo {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.page-footer__text {
+  line-height: 1.14;
+  font-weight: 700;
+  letter-spacing: var(--mainLetterSpacing);
+  text-transform: uppercase;
+  color: var(--lightFontColor);
+  margin-bottom: 20px;
+}
+
+.page-footer__box:first-child {
+  margin-right: 70px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.page-footer__box:nth-child(2) {
+  margin-right: 93px;
+}
+
+.address__list {
+  font-style: normal;
+  line-height: 1.71;
+  letter-spacing: var(--mainLetterSpacing);
+}
+
+.address__map {
+  text-decoration: none;
+  color: var(--lightFontColor);
+}
+
+.address__item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.address__link {
+  color: rgba(255, 255, 255, 0.6);
+  -webkit-transition: color var(--mainTransitionTime) var(--mainTransition);
+  transition: color var(--mainTransitionTime) var(--mainTransition);
+}
+
+.address__link:focus, .address__link:hover {
+  color: var(--brandColor);
+}
+
+.subscribe {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.subscribe__input {
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  padding: 0 16px;
+  font-size: 16px;
+  color: var(--lightFontColor);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: var(--mainBg);
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  -webkit-transition: border-color var(--mainTransitionTime) var(--mainTransition);
+  transition: border-color var(--mainTransitionTime) var(--mainTransition);
+}
+
+.subscribe__input::-webkit-input-placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: var(--mainLetterSpacing);
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe__input:-ms-input-placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: var(--mainLetterSpacing);
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe__input::-ms-input-placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: var(--mainLetterSpacing);
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe__input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: var(--mainLetterSpacing);
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe__input:focus {
+  border-color: var(--brandColor);
+  outline: none;
 }
 /*# sourceMappingURL=main.css.map */
