--- a/sass/common/_button.scss
+++ b/sass/common/_button.scss
@@ -1,4 +1,5 @@
 .button {
+  @include flex-center();
   font-size: 16px;
   font-weight: 700;
   line-height: 1.87;
@@ -14,5 +15,16 @@
   &:hover {
     background-color: var(--brandHover);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
+}
+
+.button__icon {
+  fill: currentColor;
+
+  &--left {
+    margin-right: 10px;
+  }
+  &--right {
+    margin-left: 10px;
   }
 }
