--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,4 +11,10 @@
 @import "./common/button";
 @import "./components/section";
 @import "./components/features";
+@import "./components/works";
+@import "./components/team";
+@import "./common/social-links";
+@import "./components/clients";
+@import "./components/page-footer";
+@import "./components/subscribe";
 
