--- a/css/main.css
+++ b/css/main.css
@@ -52,13 +52,6 @@ body {
   background-color: var(--nullBg);
 }
 
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
 .visually-hidden {
   position: absolute;
   clip: rect(0 0 0 0);
@@ -68,6 +61,13 @@ body {
   border: 0;
   padding: 0;
   overflow: hidden;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .page-header {
@@ -292,6 +292,10 @@ body {
 
 .section--dark-bg {
   background-color: var(--sectionBg);
+}
+
+.section__filter {
+  margin-bottom: 50px;
 }
 
 .section__title {
@@ -643,5 +647,224 @@ body {
 .subscribe__input:focus {
   border-color: var(--brandColor);
   outline: none;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: opacity var(--mainTransitionTime) var(--mainTransition), visibility var(--mainTransitionTime) linear;
+  transition: opacity var(--mainTransitionTime) var(--mainTransition), visibility var(--mainTransitionTime) linear;
+}
+
+.backdrop--hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop--hidden .modal {
+  -webkit-transform: translate(-50%, -50%) scale(1.2);
+          transform: translate(-50%, -50%) scale(1.2);
+  opacity: 0;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  width: 528px;
+  height: 581px;
+  background-color: var(--nullBg);
+  border-radius: 4px;
+  padding: 40px;
+  opacity: 1;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  -webkit-transition: opacity var(--mainTransitionTime) var(--mainTransition), -webkit-transform var(--mainTransitionTime) var(--mainTransition);
+  transition: opacity var(--mainTransitionTime) var(--mainTransition), -webkit-transform var(--mainTransitionTime) var(--mainTransition);
+  transition: transform var(--mainTransitionTime) var(--mainTransition), opacity var(--mainTransitionTime) var(--mainTransition);
+  transition: transform var(--mainTransitionTime) var(--mainTransition), opacity var(--mainTransitionTime) var(--mainTransition), -webkit-transform var(--mainTransitionTime) var(--mainTransition);
+}
+
+.modal__text {
+  font-size: 20px;
+  line-height: 1.15;
+  font-weight: 700;
+  letter-spacing: var(--mainLetterSpacing);
+  text-align: center;
+  margin-bottom: 12px;
+  color: var(--firstFontColor);
+}
+
+.modal__close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: var(--nullBg);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  -webkit-transition: fill var(--mainTransitionTime) var(--mainTransition);
+  transition: fill var(--mainTransitionTime) var(--mainTransition);
+}
+
+.modal__close:focus .modal__icon, .modal__close:hover .modal__icon {
+  fill: var(--brandColor);
+}
+
+.form__wrapper {
+  position: relative;
+  display: block;
+}
+
+.form__icon {
+  position: absolute;
+  left: 12px;
+  top: 11px;
+  -webkit-transition: fill var(--mainTransitionTime) var(--mainTransition);
+  transition: fill var(--mainTransitionTime) var(--mainTransition);
+}
+
+.form__button {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.form__field {
+  position: relative;
+  display: block;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--secondFontColor);
+  margin-bottom: 10px;
+}
+
+.form__field:nth-last-of-type(2) {
+  margin-bottom: 20px;
+}
+
+.form__field:last-of-type {
+  margin-bottom: 30px;
+}
+
+.form__textarea,
+.form__input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  margin-top: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  -webkit-transition: border-color var(--mainTransitionTime) var(--mainTransition);
+  transition: border-color var(--mainTransitionTime) var(--mainTransition);
+}
+
+.form__textarea:focus,
+.form__input:focus {
+  border-color: var(--brandColor);
+  outline: none;
+}
+
+.form__input:focus + .form__icon {
+  fill: var(--brandColor);
+}
+
+.form__textarea {
+  height: 120px;
+  resize: none;
+  padding: 12px 16px;
+}
+
+.form__textarea::-webkit-input-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form__textarea:-ms-input-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form__textarea::-ms-input-placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form__textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.agreement {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.agreement__label {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: var(--mainLetterSpacing);
+}
+
+.agreement__link {
+  text-decoration: underline;
+  color: var(--brandColor);
+}
+
+/* ------------------------------check-icon-focus for tab--------------------- */
+.agreement__checkbox:focus + .agreement__icon {
+  outline: 1px solid var(--brandColor);
+}
+
+/* ------------------------------custom-check-box----------------------------- */
+.agreement__checkbox:checked + .agreement__icon {
+  border-color: var(--brandColor);
+  background-color: var(--brandColor);
+}
+
+.agreement__icon {
+  border: 1.8px solid var(--firstFontColor);
+  border-radius: 2px;
+  -webkit-transition: border-color var(--mainTransitionTime) var(--mainTransition), background-color var(--mainTransitionTime) var(--mainTransition);
+  transition: border-color var(--mainTransitionTime) var(--mainTransition), background-color var(--mainTransitionTime) var(--mainTransition);
+}
+
+.agreement__icon--left {
+  margin-right: 7px;
 }
 /*# sourceMappingURL=main.css.map */
