done sass for 2 pages

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,7 +20,8 @@
 @import "./components/page-footer";
 @import "./components/subscribe";
 //=====page-portfolio-component
-
+@import "./components/filter-buttons";
+@import "./components/portfolio-cards";
 //=====modal-window==============
 @import "./common/modal-window";
 @import "./common/modal-form";
