--- a/css/main.css
+++ b/css/main.css
@@ -649,6 +649,138 @@ body {
   outline: none;
 }
 
+.filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.filter__item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.filter__btn {
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: var(--mainLetterSpacing);
+  font-weight: 500;
+  padding: 6px 22px;
+  border-radius: 4px;
+  background-color: var(--sectionBg);
+  -webkit-transition: color var(--mainTransitionTime) var(--mainTransition), background-color var(--mainTransitionTime) var(--mainTransition), -webkit-box-shadow var(--mainTransitionTime) var(--mainTransition);
+  transition: color var(--mainTransitionTime) var(--mainTransition), background-color var(--mainTransitionTime) var(--mainTransition), -webkit-box-shadow var(--mainTransitionTime) var(--mainTransition);
+  transition: color var(--mainTransitionTime) var(--mainTransition), background-color var(--mainTransitionTime) var(--mainTransition), box-shadow var(--mainTransitionTime) var(--mainTransition);
+  transition: color var(--mainTransitionTime) var(--mainTransition), background-color var(--mainTransitionTime) var(--mainTransition), box-shadow var(--mainTransitionTime) var(--mainTransition), -webkit-box-shadow var(--mainTransitionTime) var(--mainTransition);
+}
+
+.filter__btn:focus, .filter__btn:hover {
+  color: var(--lightFontColor);
+  background-color: var(--brandColor);
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.portfolio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.portfolio__thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio__img {
+  display: block;
+}
+
+.portfolio__overlay {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: opacity var(--mainTransitionTime) var(--mainTransition), -webkit-transform var(--mainTransitionTime) var(--mainTransition);
+  transition: opacity var(--mainTransitionTime) var(--mainTransition), -webkit-transform var(--mainTransitionTime) var(--mainTransition);
+  transition: transform var(--mainTransitionTime) var(--mainTransition), opacity var(--mainTransitionTime) var(--mainTransition);
+  transition: transform var(--mainTransitionTime) var(--mainTransition), opacity var(--mainTransitionTime) var(--mainTransition), -webkit-transform var(--mainTransitionTime) var(--mainTransition);
+}
+
+.portfolio__description {
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: var(--mainLetterSpacing);
+  padding: 63px 24px;
+  color: var(--lightFontColor);
+}
+
+.portfolio__box {
+  padding: 20px 24px;
+  background-color: var(--nullBg);
+  border: 1px solid #eeeeee;
+  border-top: none;
+}
+
+.portfolio__title {
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  font-weight: 700;
+  margin-bottom: 4px;
+}
+
+.portfolio__text {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: var(--mainLetterSpacing);
+  color: var(--secondFontColor);
+}
+
+.portfolio__item {
+  -ms-flex-preferred-size: calc((100% - 60px) / 3);
+      flex-basis: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.portfolio__item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.portfolio__item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.portfolio__link {
+  display: block;
+  color: var(--firstFontColor);
+  -webkit-transition: -webkit-box-shadow var(--mainTransitionTime) var(--mainTransition);
+  transition: -webkit-box-shadow var(--mainTransitionTime) var(--mainTransition);
+  transition: box-shadow var(--mainTransitionTime) var(--mainTransition);
+  transition: box-shadow var(--mainTransitionTime) var(--mainTransition), -webkit-box-shadow var(--mainTransitionTime) var(--mainTransition);
+}
+
+.portfolio__link:focus, .portfolio__link:hover {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio__link:focus .portfolio__overlay, .portfolio__link:hover .portfolio__overlay {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
 .backdrop {
   position: fixed;
   top: 0;
