+local $ in portfolio item

--- a/sass/components/_portfolio-cards.scss
+++ b/sass/components/_portfolio-cards.scss
@@ -57,9 +57,10 @@
 }
 
 .portfolio__item {
-	flex-basis: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
+	$margin: 30px;
+	flex-basis: calc((100% - 2 * #{$margin}) / 3);
+  margin-right: $margin;
+  margin-bottom: $margin;
 
 	&:nth-child(3n) {
 		margin-right: 0;
