--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -13,26 +13,24 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
 
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+.hero__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  &__title {
-    font-size: 44px;
-    font-weight: 900;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-  
-    text-transform: uppercase;
-    text-align: center;
-    max-width: 700px;
-    margin-bottom: 30px;
-    color: var(--lightFontColor);
-  }
+.hero__title {
+  margin-bottom: 30px;
+  max-width: 700px;
 
-  &__btn {
-  }
+  font-size: 44px;
+  font-weight: 900;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-align: center;
+
+  color: var(--lightFontColor);
 }
