--- a/sass/common/_modal-form.scss
+++ b/sass/common/_modal-form.scss
@@ -1,32 +1,11 @@
-
 .form {
-
-  &__wrapper {
-    position: relative;
-    display: block;
-  }
-
-  &__icon {
-    position: absolute;
-    left: 12px;
-    top: 11px;
-    transition: fill var(--mainTransitionTime) var(--mainTransition);
-  }
-
-  &__textarea {
-  }
-
-  &__button {
-    margin-left: auto;
-    margin-right: auto;
-  }
+  font-size: 12px;
+  line-height: 1.17;
 }
 
 .form__field {
   position: relative;
   display: block;
-  font-size: 12px;
-  line-height: 1.17;
   letter-spacing: 0.01em;
   color: var(--secondFontColor);
   margin-bottom: 10px;
@@ -34,13 +13,19 @@
   &:nth-last-of-type(2) {
     margin-bottom: 20px;
   }
+
   &:last-of-type {
     margin-bottom: 30px;
   }
 }
 
-.form__textarea,
-.form__input {
+.form__wrapper {
+  position: relative;
+  display: block;
+}
+
+.form__input,
+.form__textarea {
   display: block;
   width: 100%;
   height: 40px;
@@ -71,6 +56,18 @@
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
   }
+}
+
+.form__icon {
+  position: absolute;
+  left: 12px;
+  top: 11px;
+  transition: fill var(--mainTransitionTime) var(--mainTransition);
+}
+
+.form__button {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .agreement {
