--- a/sass/common/_social-links.scss
+++ b/sass/common/_social-links.scss
@@ -6,10 +6,6 @@
     padding: 0;
     margin: 0;
   }
-
-  &__icon {
-    fill: currentColor;
-  }
 }
 
 .social__item {
@@ -40,4 +36,8 @@
     background-color: var(--brandColor);
     color: var(--nullBg);
   }
+}
+
+.social__icon {
+  fill: currentColor;
 }
