--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,9 +1,5 @@
 .clients {
   display: flex;
-
-  &__icon {
-    fill: currentColor;
-  }
 }
 
 .clients__item{
@@ -29,4 +25,8 @@
     color: var(--brandColor);
     border-color: var(--brandColor);
   }
+}
+
+.clients__icon {
+  fill: currentColor;
 }
