--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,31 +1,5 @@
 .features {
   display: flex;
-
-	&__box {
-    @include flex-center();
-    background-color: #F5F4FA;
-    border-radius: 4px;
-    margin-bottom: 30px;
-    width: 270px;
-    height: 120px;
-	}
-
-	&__icon {
-	}
-
-	&__title {
-    font-weight: 700;
-    line-height: 1.14;
-    letter-spacing: var(--mainLetterSpacing);
-    text-transform: uppercase;
-    margin-bottom: 10px;
-	}
-
-	&__text {
-    line-height: 1.71;
-    letter-spacing: var(--mainLetterSpacing);
-    color: var(--secondFontColor)
-	}
 }
 
 .features__item {
@@ -34,6 +8,29 @@
   &:not(:last-child) {
     margin-right: 30px;
   }
+}
+
+.features__box {
+  @include flex-center();
+  background-color: #F5F4FA;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+}
+
+.features__title {
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: var(--mainLetterSpacing);
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.features__text {
+  line-height: 1.71;
+  letter-spacing: var(--mainLetterSpacing);
+  color: var(--secondFontColor)
 }
 
 
