--- a/css/main.css
+++ b/css/main.css
@@ -710,12 +710,14 @@ body {
   transition: box-shadow var(--mainTransitionTime) var(--mainTransition), -webkit-box-shadow var(--mainTransitionTime) var(--mainTransition);
 }
 
-.portfolio__link:focus, .portfolio__link:hover {
+.portfolio__link:focus,
+.portfolio__link:hover {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio__link:focus .portfolio__overlay, .portfolio__link:hover .portfolio__overlay {
+.portfolio__link:focus .portfolio__overlay,
+.portfolio__link:hover .portfolio__overlay {
   opacity: 1;
   -webkit-transform: translateY(0);
           transform: translateY(0);
