--- a/sass/components/_portfolio-cards.scss
+++ b/sass/components/_portfolio-cards.scss
@@ -22,16 +22,16 @@
 	display: block;
 	color: var(--firstFontColor);
 	transition: box-shadow var(--mainTransitionTime) var(--mainTransition);
+}
 
-	&:focus,
-	&:hover {
-		box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
-		0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.portfolio__link:focus,
+.portfolio__link:hover {
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
+	0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 
-		.portfolio__overlay {
-			opacity: 1;
-			transform: translateY(0);
-		}
+	.portfolio__overlay {
+		opacity: 1;
+		transform: translateY(0);
 	}
 }
 
