--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -8,10 +8,10 @@
   &--dark-bg {
     background-color: var(--sectionBg);
   }
+}
 
-  &__filter {
-    margin-bottom: 50px;
-  }
+.section__filter {
+  margin-bottom: 50px;
 }
 
 .section__title {
