--- a/css/main.css
+++ b/css/main.css
@@ -354,6 +354,16 @@ body {
   display: flex;
 }
 
+.works__item {
+  position: relative;
+  -ms-flex-preferred-size: calc((100% - 60px) / 3);
+      flex-basis: calc((100% - 60px) / 3);
+}
+
+.works__item:not(:last-child) {
+  margin-right: 30px;
+}
+
 .works__box {
   position: absolute;
   left: 0;
@@ -380,24 +390,24 @@ body {
   color: var(--lightFontColor);
 }
 
-.works__item {
-  position: relative;
-  -ms-flex-preferred-size: calc((100% - 60px) / 3);
-      flex-basis: calc((100% - 60px) / 3);
-}
-
-.works__item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .team {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.team__img {
-  display: block;
+.team__item {
+  -ms-flex-preferred-size: calc((100% - 3 * 30px) / 4);
+      flex-basis: calc((100% - 3 * 30px) / 4);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background-color: var(--nullBg);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.team__item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .team__box {
@@ -415,20 +425,6 @@ body {
 .team__text {
   margin-bottom: 16px;
   color: var(--secondFontColor);
-}
-
-.team__item {
-  -ms-flex-preferred-size: calc((100% - 90px) / 4);
-      flex-basis: calc((100% - 90px) / 4);
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  background-color: var(--nullBg);
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-
-.team__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .social {
