--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,30 +1,9 @@
 .team {
   display: flex;
-
-  &__img {
-    display: block;
-  }
-
-  &__box {
-    font-size: 16px;
-    letter-spacing: var(--mainLetterSpacing);
-    text-align: center;
-    padding: 30px 32px;
-  }
-
-  &__title {
-    font-weight: 500;
-    margin-bottom: 10px;
-  }
-
-  &__text {
-    margin-bottom: 16px;
-    color: var(--secondFontColor);
-  }
 }
 
 .team__item {
-  flex-basis: calc((100% - 90px) / 4);
+  flex-basis: calc((100% - 3 * 30px) / 4);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   background-color: var(--nullBg);
@@ -38,4 +17,19 @@
   }
 }
 
+.team__box {
+  font-size: 16px;
+  letter-spacing: var(--mainLetterSpacing);
+  text-align: center;
+  padding: 30px 32px;
+}
 
+.team__title {
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.team__text {
+  margin-bottom: 16px;
+  color: var(--secondFontColor);
+}
