--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,26 +1,5 @@
 .works {
   display: flex;
-
-  &__img {
-  }
-
-  &__box {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    @include flex-center();
-    width: 100%;
-    height: 70px;
-    background-color: rgba(47, 48, 58, 0.8);
-  }
-
-  &__label {
-    font-weight: 700;
-    line-height: 1.14;
-    letter-spacing: var(--mainLetterSpacing);
-    text-transform: uppercase;
-    color: var(--lightFontColor);
-  }
 }
 
 .works__item {
@@ -30,4 +9,22 @@
   &:not(:last-child) {
     margin-right: 30px;
   }
+}
+
+.works__box {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  @include flex-center();
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.works__label {
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: var(--mainLetterSpacing);
+  text-transform: uppercase;
+  color: var(--lightFontColor);
 }
