--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,5 +1,5 @@
-@mixin flex-center($flex: flex) {
+@mixin flex-center($flex: flex, $justify: center, $align: center) {
   display: $flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: $justify;
+  align-items: $align;
 }
