--- a/css/main.css
+++ b/css/main.css
@@ -441,6 +441,11 @@ body {
   margin: 0;
 }
 
+.social__item {
+  width: 44px;
+  height: 44px;
+}
+
 .social__item:not(:last-child) {
   margin-right: 10px;
 }
@@ -455,8 +460,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 44px;
-  height: 44px;
+  width: 100%;
+  height: 100%;
   outline: none;
   color: var(--iconColor);
   border-radius: 50%;
@@ -485,6 +490,11 @@ body {
   display: flex;
 }
 
+.clients__item {
+  width: 170px;
+  height: 92px;
+}
+
 .clients__item:not(:last-child) {
   margin-right: 30px;
 }
@@ -499,8 +509,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 170px;
-  height: 92px;
+  width: 100%;
+  height: 100%;
   border-radius: 4px;
   outline: none;
   border: 1px solid var(--iconColor);
