--- a/sass/common/_social-links.scss
+++ b/sass/common/_social-links.scss
@@ -9,6 +9,8 @@
 }
 
 .social__item {
+  width: 44px;
+  height: 44px;
 
   &:not(:last-child) {
     margin-right: 10px;
@@ -17,8 +19,8 @@
 
 .social__link {
   @include flex-center();
-  width: 44px;
-  height: 44px;
+  width: 100%;
+  height: 100%;
   outline: none;
   color: var(--iconColor);
   border-radius: 50%;
