--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -3,6 +3,8 @@
 }
 
 .clients__item{
+  width: 170px;
+  height: 92px;
 
   &:not(:last-child) {
   margin-right: 30px;
@@ -11,8 +13,8 @@
 
 .clients__link {
   @include flex-center();
-  width: 170px;
-  height: 92px;
+  width: 100%;
+  height: 100%;
   border-radius: 4px;
   outline: none;
   border: 1px solid var(--iconColor);
